force-app/main/default/objects/Account/fields/nfr_purpose__c.field-meta.xml
<CustomField>
    <fullName>nfr_purpose__c</fullName>
    <label>NFR Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo for Customers / Show Room</fullName>
            </value>
            <value>
                <fullName>Security Solution for Partner Business Office</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Internal Sales Training</fullName>
            </value>
            <value>
                <fullName>Internal Technical Training</fullName>
            </value>
            <value>
                <fullName>Trade Show / Event Demo</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>