force-app/main/default/objects/Account/fields/num_associated_deals__c.field-meta.xml
<CustomField>
    <fullName>num_associated_deals__c</fullName>
    <label>Number of Associated Deals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>