force-app/main/default/objects/Account/fields/num_contacted_notes__c.field-meta.xml
<CustomField>
    <fullName>num_contacted_notes__c</fullName>
    <label>Number of times contacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>