force-app/main/default/objects/Account/fields/Number_of_Locations__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Locations__c</fullName>
    <label>Number of Locations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0-25</fullName>
            </value>
            <value>
                <fullName>26-100</fullName>
            </value>
            <value>
                <fullName>100+</fullName>
            </value>
            <value>
                <fullName>1-9</fullName>
                <isActive>false</isActive>
                <label>1-9</label>
            </value>
            <value>
                <fullName>10-50</fullName>
                <isActive>false</isActive>
                <label>10-50</label>
            </value>
            <value>
                <fullName>100-150</fullName>
                <isActive>false</isActive>
                <label>100-150</label>
            </value>
            <value>
                <fullName>151+</fullName>
                <isActive>false</isActive>
                <label>151+</label>
            </value>
            <value>
                <fullName>51-99</fullName>
                <isActive>false</isActive>
                <label>51-99</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>