force-app/main/default/objects/Account/fields/number_of_sites__c.field-meta.xml
<CustomField>
    <fullName>number_of_sites__c</fullName>
    <label>Number of sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>