force-app/main/default/objects/Account/fields/of_active_sites_with_indoor_alarms__c.field-meta.xml
<CustomField>
    <fullName>of_active_sites_with_indoor_alarms__c</fullName>
    <label>% of Active Sites with Indoor Alarms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>