force-app/main/default/objects/Account/fields/of_cloud_storage_allocation_used__c.field-meta.xml
<CustomField>
    <fullName>of_cloud_storage_allocation_used__c</fullName>
    <label>% of Cloud Storage Allocation Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>