force-app/main/default/objects/Account/fields/Original_Source_Data_1__c.field-meta.xml
<CustomField>
    <fullName>Original_Source_Data_1__c</fullName>
    <label>Original Source Data 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>