force-app/main/default/objects/Account/fields/partner__c.field-meta.xml
<CustomField>
    <fullName>partner__c</fullName>
    <label>Partner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>