force-app/main/default/objects/Account/fields/partner_deal_registration_readiness__c.field-meta.xml
<CustomField>
    <fullName>partner_deal_registration_readiness__c</fullName>
    <label>Partner Deal Registration Readiness</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Identified - No Contact Made)</fullName>
            </value>
            <value>
                <fullName>Lead Identified - Contact Made</fullName>
            </value>
            <value>
                <fullName>Discovery Stage - Understanding Prospect Needs</fullName>
            </value>
            <value>
                <fullName>Ready to Schedule Demo</fullName>
            </value>
            <value>
                <fullName>Pricing Shared</fullName>
            </value>
            <value>
                <fullName>Verbal Agreement</fullName>
            </value>
            <value>
                <fullName>Negotiation in Progress</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>