force-app/main/default/objects/Account/fields/partner_deal_registration_status__c.field-meta.xml
<CustomField>
    <fullName>partner_deal_registration_status__c</fullName>
    <label>Partner Deal Registration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>*NEW*</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
            <value>
                <fullName>Assigned to AE</fullName>
            </value>
            <value>
                <fullName>On Hold (need more info)</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Invalid Registration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>