force-app/main/default/objects/Account/fields/partner_discount_revshare__c.field-meta.xml
<CustomField>
    <fullName>partner_discount_revshare__c</fullName>
    <label>Partner Discount/RevShare</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bronze, 25% off MSRP &amp; add-ons</fullName>
            </value>
            <value>
                <fullName>Silver, 30% off MSRP &amp; 25% off add-ons</fullName>
            </value>
            <value>
                <fullName>Gold, 40% off MSRP &amp; 25% off add-ons</fullName>
            </value>
            <value>
                <fullName>RevShare 10%</fullName>
            </value>
            <value>
                <fullName>RevShare 15%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>