force-app/main/default/objects/Account/fields/point_of_contact__c.field-meta.xml
<CustomField>
    <fullName>point_of_contact__c</fullName>
    <label>Main contact name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>