force-app/main/default/objects/Account/fields/pos_type__c.field-meta.xml
<CustomField>
    <fullName>pos_type__c</fullName>
    <label>POS Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>