force-app/main/default/objects/Account/fields/Primary_Industry__c.field-meta.xml
<CustomField>
    <fullName>Primary_Industry__c</fullName>
    <label>Primary Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Airport Vendor</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
            </value>
            <value>
                <fullName>Bar and Club</fullName>
            </value>
            <value>
                <fullName>Cannabis and Cultivation</fullName>
            </value>
            <value>
                <fullName>C-Store and Gas</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Fast Casual</fullName>
            </value>
            <value>
                <fullName>Financial</fullName>
            </value>
            <value>
                <fullName>FSR</fullName>
            </value>
            <value>
                <fullName>Golf and Recreation</fullName>
            </value>
            <value>
                <fullName>Grocery</fullName>
            </value>
            <value>
                <fullName>Hardware and Building Materials</fullName>
            </value>
            <value>
                <fullName>Health and Beauty</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Hotels and Accommodation</fullName>
            </value>
            <value>
                <fullName>Liquor Stores</fullName>
            </value>
            <value>
                <fullName>Natural Resources</fullName>
            </value>
            <value>
                <fullName>Property Management</fullName>
            </value>
            <value>
                <fullName>Quick Service</fullName>
            </value>
            <value>
                <fullName>Regulated</fullName>
            </value>
            <value>
                <fullName>Religious Organizations</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Shelter and Resource Centre</fullName>
            </value>
            <value>
                <fullName>SolinkInternal</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Warehouse Logistics</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>