force-app/main/default/objects/Account/fields/product_type_s__c.field-meta.xml
<CustomField>
    <fullName>product_type_s__c</fullName>
    <label>Products &amp; Services Offered</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>