force-app/main/default/objects/Account/fields/Record_source__c.field-meta.xml
<CustomField>
    <fullName>Record_source__c</fullName>
    <label>Record source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>