force-app/main/default/objects/Account/fields/Record_source_detail_1__c.field-meta.xml
<CustomField>
    <fullName>Record_source_detail_1__c</fullName>
    <label>Record source detail 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>