force-app/main/default/objects/Account/fields/Record_source_detail_2__c.field-meta.xml
<CustomField>
    <fullName>Record_source_detail_2__c</fullName>
    <label>Record source detail 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>