force-app/main/default/objects/Account/fields/Record_source_detail_3__c.field-meta.xml
<CustomField>
    <fullName>Record_source_detail_3__c</fullName>
    <label>Record source detail 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>