force-app/main/default/objects/Account/fields/requested_co_branded_documents__c.field-meta.xml
<CustomField>
    <fullName>requested_co_branded_documents__c</fullName>
    <label>Requested Co-branded Documents</label>
    <type>Date</type>
</CustomField>