force-app/main/default/objects/Account/fields/reseller_ae_owner_international_only__c.field-meta.xml
<CustomField>
    <fullName>reseller_ae_owner_international_only__c</fullName>
    <label>Reseller - AE Owner (International Only)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>