force-app/main/default/objects/Account/fields/reseller_agreement__c.field-meta.xml
<CustomField>
    <fullName>reseller_agreement__c</fullName>
    <label>RESELLER AGREEMENT</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RESELLER AGREEMENT</fullName>
            </value>
            <value>
                <fullName>Agreement Missing</fullName>
            </value>
            <value>
                <fullName>Agreement Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>