force-app/main/default/objects/Account/fields/reseller_for_install_focus_partner__c.field-meta.xml
<CustomField>
    <fullName>reseller_for_install_focus_partner__c</fullName>
    <label>Reseller Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SI - Systems Integrator</fullName>
            </value>
            <value>
                <fullName>VAR - Value-Added Reseller</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>