force-app/main/default/objects/Account/fields/Reseller_ID_Callhome_Manage__c.field-meta.xml
<CustomField>
    <fullName>Reseller_ID_Callhome_Manage__c</fullName>
    <description>The unique identifier for the associated reseller partner in the Callhome/Manage system.</description>
    <label>Reseller ID (Callhome/Manage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>