force-app/main/default/objects/Account/fields/Reseller_Name_Callhome_Manage__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Name_Callhome_Manage__c</fullName>
    <description>The name of the reseller partner associated with the account in the Callhome/Manage system</description>
    <label>Reseller Name (Callhome/Manage)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>