force-app/main/default/objects/Account/fields/reseller_tax_id__c.field-meta.xml
<CustomField>
    <fullName>reseller_tax_id__c</fullName>
    <label>Reseller Tax ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>