force-app/main/default/objects/Account/fields/sales_engineer_smb__c.field-meta.xml
<CustomField>
    <fullName>sales_engineer_smb__c</fullName>
    <label>Sales Engineer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>