force-app/main/default/objects/Account/fields/secondary_brand_s__c.field-meta.xml
<CustomField>
    <fullName>secondary_brand_s__c</fullName>
    <label>Secondary Brand(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>