force-app/main/default/objects/Account/fields/segment__c.field-meta.xml
<CustomField>
    <fullName>segment__c</fullName>
    <label>Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>