force-app/main/default/objects/Account/fields/Solution_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Solution_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solution Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>