force-app/main/default/objects/Account/fields/Specifies_the_number_of_locations_a_comp__c.field-meta.xml
<CustomField>
    <fullName>Specifies_the_number_of_locations_a_comp__c</fullName>
    <description>&quot;Defines the more specific sub-segment of the industry to which the account belongs for ICP categorization.&quot;</description>
    <label>Specifies the number of locations a comp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>