force-app/main/default/objects/Account/fields/Sub_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Sub_Vertical__c</fullName>
    <description>Sub-vertical of the Account. Used for AE routing prior to Lead conversion.</description>
    <label>Sub-Vertical</label>
    <length>255</length>
    <type>Text</type>
</CustomField>