force-app/main/default/objects/Account/fields/system_smb_mrr__c.field-meta.xml
<CustomField>
    <fullName>system_smb_mrr__c</fullName>
    <label>SYSTEM - SMB MRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>