force-app/main/default/objects/Account/fields/tier_5_dq_notes__c.field-meta.xml
<CustomField>
    <fullName>tier_5_dq_notes__c</fullName>
    <label>Tier 5 - DQ Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>