force-app/main/default/objects/Account/fields/tier_5_dq_reason__c.field-meta.xml
<CustomField>
    <fullName>tier_5_dq_reason__c</fullName>
    <label>Tier 5 - DQ Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not ICP</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>