force-app/main/default/objects/Account/fields/timezone__c.field-meta.xml
<CustomField>
    <fullName>timezone__c</fullName>
    <label>Time  Zone</label>
    <length>29</length>
    <type>Text</type>
</CustomField>