force-app/main/default/objects/Account/fields/Total_Number_of_Customer_Locations__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Customer_Locations__c</fullName>
    <label>Total Number of Customer Locations</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>