force-app/main/default/objects/Account/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>Vertical of the account. Used for AE Assignment prior to Lead Conversion</description>
    <label>Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QSR</fullName>
            </value>
            <value>
                <fullName>FSR</fullName>
            </value>
            <value>
                <fullName>Cannabis</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Retail+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>